# inventoryapp-server

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: register.http
src/: lib.rs  main.rs
src/config/: database.rs  env.rs  mod.rs
src/controllers/: auth.rs
src/controllers/data/: lista_productos.rs  mod.rs
src/middleware/: auth.rs
src/models/: mod.rs  users.rs
src/models/data/: general_item.rs  lita_items.rs  mod.rs
src/models/errors/: api_errors.rs  config_errors.rs  mod.rs  server_error.rs
src/models/request/: auth.rs  lista_productos.rs
src/models/responses/: auth.rs  common_responses.rs  mod.rs
src/repositories/: mod.rs  user_repository.rs
src/repositories/data/: lista_productos.rs
src/routes/: auth.rs  lista_productos.rs  mod.rs
src/server/: app.rs
src/services/: jwt_service.rs  mod.rs  user_services.rs
src/services/data/: lista_productos_service.rs  mod.rs
