[package]
name = "inventario-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
bcrypt = "0.15"
rust_decimal = "1.39.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
